# siglent_python

./: .gitignore  CORRELATION.md  README.md  capture.py  main.py  pyproject.toml
samples/: Python_Socket_SDS_SCDP.py
src/: capture.py  piezo.lxi  piezo.py  piezo2.py  piezo_on_trigger.py  piezo_on_trigger_2.py  piezo_on_trigger_3.py  replay.py  reset_scope.py  trigger_capture.py
