[project]
name = "siglent-python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.10.1",
    "pyqtgraph>=0.14.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["capture", "replay", "piezo", "piezo2"]

[project.scripts]
osc_capture = "capture:main"
osc_replay = "replay:main"
piezo = "piezo:main"
piezo2 = "piezo2:main"
